# ai-shell

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md  config.toml.example
src/: cache.rs  config.rs  handlers.rs  llm.rs  main.rs  shell.rs
tests/: cli_tests.rs
