[package]
name = "ai-shell"
version = "0.3.2"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
blake3 = "1"
anyhow = "1"
atty = "0.2"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"   # для временных файлов в тестах
assert_cmd = "2" # удобные ассерты для команд (опционально)
predicates = "3" # для сложных проверок вывода
